--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" href="/static/favicon.ico">
 
     <!-- Title -->
-    <title>OBUC Test</title>
+    <title>OBUC - Prova Técninca</title>
 </head>
 
 <body>
