Adicionado classes de ordenação de tabelas

--- a/src/index.html
+++ b/src/index.html
@@ -74,12 +74,12 @@
                         </div>
                     </form>
 
-                    <table class='task-table'>
+                    <table class='task-table sortable'>
                         <thead class='table-head'>
                             <tr>
                                 <th class='head head-predio'>Prédio</th>
                                 <th class='head head-locais'>Locais de Trabalho</th>
-                                <th class='head head-vazio'></th>
+                                <th class='head head-vazio sorttable_nosort'></th>
                             </tr>
                         </thead>
                         <tbody class='table-body'>
