Adicionado Erro se Prédio não for selecionado

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,7 @@
                         <div class='task-input'>
                             <label for="predios">Prédios</label>
                             <select name="predios" id="predios">
+                                <option value='' selected></option>
                                 <option value='Prédio 1'>Prédio 1</option>
                                 <option value='Prédio 2'>Prédio 2</option>
                                 <option value='Prédio 3'>Prédio 3</option>
